--- a/Styles/style.css
+++ b/Styles/style.css
@@ -59,26 +59,36 @@ header .hero-imgs {
     width: 50%;
     height: 500px;
     background-image: url("/images/Banner\ Image.png");
+    background-size: 82%;
     background-repeat: no-repeat;
-    background-size: 100%;
-    animation: changeImage 20s ease-in infinite;
+    background-position: right;
+    animation: changeImage 10s cubic-bezier(0, 1.28, .06, .94) infinite;
+
 }
 
 @keyframes changeImage {
     0% {
         background-image: url("/images/Banner\ Image.png");
+        background-size: 82%;
+        background-position: right;
     }
 
     25% {
         background-image: url("/images/Banner\ Image.png");
+        background-size: 82%;
+        background-position: right;
     }
 
     50% {
         background-image: url("/images/Banner\ Image\ 1.png");
+        background-size: 90%;
+        background-position: right;
     }
 
     75% {
         background-image: url("/images/Banner\ Image\ 1.png");
+        background-size: 90%;
+        background-position: right;
     }
 
 }
