--- a/style.css
+++ b/style.css
@@ -140,8 +140,11 @@ main .blogs .blog-info {
 }
 
 main .blogs button {
-    padding: 5px 15px;
+    padding: 7px 15px;
     font-weight: bold;
+    background-color: rgb(202, 202, 202);
+    border: none;
+    border-radius: 3px;
 }
 
 main .blogs .blog-text {
@@ -301,6 +304,7 @@ footer .social-links a {
     main {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .side-menu {
