--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* ============= Attention Please ============  */
+/* For ultimate experience see this site with device 1200px for PC, 992px fot Tablet and 556px for Mobile. Thank You   */
+
 * {
     margin: 0;
     padding: 0;
